dataset1235/2025-2/1153765216/users/3700556413/executions/2372395858_2086141900.log
== RUN (2025-08-28 18:05:13)
-- CODE: 
from math import *
apotema = lado/ (2*tan**(pi/10))
area = 5 * lado * apotema
print(lado)
# faça seu códprint(lado)igo aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 18:14:27)
-- CODE: 
from math import *
apotema = lado/ (2*tan**(pi/11))
area = 11 * lado * apotema/2
print(lado)
# faça seu códprint(lado)igo aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/11))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/11))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/11))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/11))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/11))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/11))
              ^^^^
NameError: name 'lado' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:05:11)
-- CODE: 
from math import *
apotema = lado/ (2*tan**(pi/10))
area = 5 * lado * apotema
print(lado)
# faça seu códprint(lado)igo aqui!
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    apotema = lado/ (2*tan**(pi/10))
              ^^^^
NameError: name 'lado' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:56:09)
-- CODE: 
from math import *
lado = float(input("informe o comprimento do lado: "))
apotema = lado/(2*tan(pi/11))
area = 11 * lado * apotema/2
print(round(area, 2 ))
# faça seu códprint(lado)igo aqui!
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
informe o comprimento do lado: 234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
informe o comprimento do lado: 149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
informe o comprimento do lado: 337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
informe o comprimento do lado: 37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
informe o comprimento do lado: 458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
informe o comprimento do lado: 84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
